# pokemon-30

./: .gitignore  README.md  pyproject.toml
data/pokemon30/: manifest.json
docs/: DESIGN.md  IMPLEMENTATION.md
scripts/: download_logos.py  download_pokemon30_logos.py
serebii_logos/: __init__.py  cli.py  downloader.py  logo_sets.py  models.py
